answer-content/205992.txt
<div class="s-prose s-prose__disable-spoiler-hover js-post-body" itemprop="text">
<p>lets start with the book you are using is VERY obsolete. </p>

<p>Regarding: <code>main()</code> there are only two valid signatures for <code>main()</code> they are <code>int main( void )</code> and <code>int main( int argc, char *argv[] )</code></p>

<p>the header file: <code>stdio.h</code> contains a prototype for the function: <code>getline()</code> that does not match the signature in the posted code, so suggest changing the name of that function to something unique, like <code>myGetline()</code></p>

<p>when compiling, always enable the warnings,, then fix those warnings.  (for <code>gcc</code>, at a minimum use: <code>-Wall -Wextra -Wconversion -pedantic -std=gnu11</code> )  Note: other compilers will use different options to perform the same functionality.</p>

<p>the logic is copying all line parts, overlaying them.  So the only item that will be printed is the last part of the line.  Suggest only copying the first part of the line and ignoring the rest.</p>

<p>here is what compiling the posted code causes the compiler to output:</p>

<pre><code>gcc -ggdb -Wall -Wextra -Wconversion -pedantic -std=gnu11 -c "untitled.c" 

untitled.c:8:5: error: conflicting types for ‘getline’
 int getline(char line[], int maxline);
     ^~~~~~~

In file included from untitled.c:5:0:
/usr/include/stdio.h:616:20: note: previous declaration of ‘getline’ was here
 extern _IO_ssize_t getline (char **__restrict __lineptr,
                    ^~~~~~~
untitled.c:13:1: warning: return type defaults to ‘int’ [-Wimplicit-int]
 main()
 ^~~~

untitled.c:49:5: error: conflicting types for ‘getline’
 int getline(char s[], int lim)
     ^~~~~~~

In file included from untitled.c:5:0:
/usr/include/stdio.h:616:20: note: previous declaration of ‘getline’ was here
 extern _IO_ssize_t getline (char **__restrict __lineptr,
                    ^~~~~~~

untitled.c: In function ‘getline’:
untitled.c:54:16: warning: conversion to ‘char’ from ‘int’ may alter its value [-Wconversion]
         s[i] = c;
                ^

untitled.c:56:16: warning: conversion to ‘char’ from ‘int’ may alter its value [-Wconversion]
         s[i] = c;
                ^

Compilation failed.
</code></pre>
    </div>